# einstein-kahan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
benchmarks/: accuracy_comparison.py  performance_comparison.py
cpp/: kahan_kernel.cpp  kahan_kernel.h  python_bindings.cpp
docs/: THEORY.md
examples/: basic_usage.py  scientific_computing.py
kahan/: __init__.py  algorithms.py  core.py
tests/: __init__.py  conftest.py  test_algorithms.py  test_core.py
