[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "pybind11>=2.6.0",
    "numpy>=1.19.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "kahan-summation"
version = "1.0.0"
description = "High-precision numerical summation with Kahan and Einstein-Kahan algorithms"
readme = "README.md"
authors = [
    {name = "Kahan Summation Contributors", email = "contributors@kahan-summation.org"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research", 
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
keywords = [
    "numerical", 
    "summation", 
    "kahan", 
    "floating-point",
    "precision", 
    "error-correction", 
    "parallel", 
    "scientific-computing"
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "torch>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8", 
    "mypy>=0.900",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "jupyter>=1.0",
    "matplotlib>=3.3",
    "scipy>=1.7",
    "pre-commit>=2.15.0",
]
cpp = [
    "pybind11>=2.6.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0", 
    "myst-parser>=0.15.0",
    "sphinx-autodoc-typehints>=1.12.0",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-xdist>=2.0",
    "hypothesis>=6.0",
]
all = [
    "kahan-summation[dev,cpp,docs,test]"
]

[project.urls]
Homepage = "https://github.com/your-username/kahan-summation"
Documentation = "https://github.com/your-username/kahan-summation/docs" 
Repository = "https://github.com/your-username/kahan-summation.git"
"Bug Tracker" = "https://github.com/your-username/kahan-summation/issues"
Changelog = "https://github.com/your-username/kahan-summation/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"kahan" = "kahan"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["kahan*"]
exclude = ["tests*", "benchmarks*", "docs*", "examples*"]

[tool.setuptools.package-data]
kahan = ["*.pyi", "py.typed"]

# Testing configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=kahan",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "cpp: marks tests that require C++ extensions", 
    "integration: marks tests as integration tests",
    "benchmark: marks performance benchmark tests",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Code formatting with Black
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/fixtures
)/
'''

# Import sorting with isort
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = ["kahan"]
known_third_party = ["numpy", "torch", "pytest", "hypothesis"]

# Type checking with mypy
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "numpy.*", 
    "scipy.*",
    "matplotlib.*",
    "pybind11.*",
]
ignore_missing_imports = true

# Linting with flake8 (configuration in setup.cfg for compatibility)

# Coverage configuration
[tool.coverage.run]
source = ["kahan"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "*/cpp/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug:",
    "if settings\\.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# Documentation with Sphinx
[tool.sphinx]
source-dir = "docs"
build-dir = "docs/_build"

# Pre-commit hooks
[tool.pre-commit]
repos = [
    {
        repo = "https://github.com/pre-commit/pre-commit-hooks",
        rev = "v4.4.0",
        hooks = [
            {id = "trailing-whitespace"},
            {id = "end-of-file-fixer"},
            {id = "check-yaml"},
            {id = "check-added-large-files"},
            {id = "check-merge-conflict"},
        ]
    },
    {
        repo = "https://github.com/psf/black",
        rev = "23.3.0",
        hooks = [
            {id = "black"}
        ]
    },
    {
        repo = "https://github.com/pycqa/isort", 
        rev = "5.12.0",
        hooks = [
            {id = "isort"}
        ]
    },
    {
        repo = "https://github.com/pycqa/flake8",
        rev = "6.0.0", 
        hooks = [
            {id = "flake8"}
        ]
    },
    {
        repo = "https://github.com/pre-commit/mirrors-mypy",
        rev = "v1.3.0",
        hooks = [
            {id = "mypy", additional_dependencies = ["types-all"]}
        ]
    }
]